--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -6,7 +6,7 @@ import { HiMail, HiPhone, HiLocationMarker } from "react-icons/hi";
 import Form from "../components/Form";
 import ComoFunciona from "../components/contacto/ComoFunciona.astro";
 import UbicacionYHorario from "../components/contacto/UbicacionYHorario.astro";
-import video from "../assets/videos/Home.mp4";
+import video from "../assets/videos/cita.mp4";
 ---
 
 <Layout
