--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero";
 import Section from "../components/Section";
 import PostCard from "../components/PostCard.astro";
-import video from "../assets/videos/Home.mp4";
+import video from "../assets/videos/conocenos.mp4";
 import { getCollection, type CollectionEntry } from "astro:content";
 
 const events = await getCollection("eventos");
