--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,10 +6,10 @@ import ServiceCard from "../components/ServiceCard";
 import Slider from "../components/Slider";
 import Form from "../components/Form";
 import { sliderData } from "../data/sliderData";
-import HomeVideo from "../assets/videos/Home.mp4";
+import HomeVideo from "../assets/videos/homeBanner.mp4";
 import Elegirnos from "../components/Home/Elegirnos.astro";
 import Testimonios from "../components/Home/Testimonios";
-import video from "../assets/videos/Home.mp4";
+import video from "../assets/videos/realHome.mp4";
 ---
 
 <Layout
