--- a/src/pages/que-hacemos.astro
+++ b/src/pages/que-hacemos.astro
@@ -5,7 +5,7 @@ import Section from "../components/Section";
 import Form from "../components/Form";
 import Hacemos from "../components/que-hacemos/Hacemos.astro";
 import ProcesoHumano from "../components/que-hacemos/ProcesoHumano";
-import video from "../assets/videos/Home.mp4";
+import video from "../assets/videos/conocenos.mp4";
 ---
 
 <Layout
