--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -7,7 +7,7 @@ import { getCollection } from "astro:content";
 import Principios from "../components/quienes-somos/Principios.astro";
 import History from "../components/quienes-somos/History.astro";
 import Values from "../components/quienes-somos/Values";
-import video from "../assets/videos/Home.mp4";
+import video from "../assets/videos/conocenos.mp4";
 
 const teamMembers = await getCollection("team");
 ---
@@ -78,6 +78,7 @@ const teamMembers = await getCollection("team");
             delay={0}
             transitionNameImage={`image-${member.slug}`}
             transitionNameTitle={`title-${member.slug}`}
+            imagePosition="object-top"
           />
         ))
       }
