UPDATE: Ajustes finales

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,7 +4,7 @@ import Hero from "../components/Hero";
 import Section from "../components/Section";
 import { getCollection } from "astro:content";
 import PostCard from "../components/PostCard.astro";
-import video from "../assets/videos/conocenos.mp4";
+import video from "../assets/videos/blog.mp4";
 
 const blogs = await getCollection("blog");
 ---
