--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -1,5 +1,5 @@
 ---
-import RootLayout from './RootLayout.astro';
+import RootLayout from "./RootLayout.astro";
 
 interface Props {
   title?: string;
@@ -10,5 +10,5 @@ const props = Astro.props;
 ---
 
 <RootLayout {...props} showHeader={false}>
-	<slot />
+  <slot />
 </RootLayout>
