--- a/src/pages/que-hacemos.astro
+++ b/src/pages/que-hacemos.astro
@@ -15,7 +15,7 @@ import video from "../assets/videos/conocenos.mp4";
   <Hero
     client:load
     title="Qué Hacemos"
-    subtitle="Ponemos tu vida en marcha para disfrutar en vida"
+    subtitle="Ponemos tu vida en marcha"
     videoSrc={video}
   />
 
