--- a/src/components/contacto/ComoFunciona.astro
+++ b/src/components/contacto/ComoFunciona.astro
@@ -1,42 +1,65 @@
 ---
 import Section from "../Section";
-import { HiCalendar, HiClock, HiVideoCamera } from 'react-icons/hi';
+import { HiCalendar, HiClock, HiVideoCamera } from "react-icons/hi";
 ---
 
-
-	<Section
-		client:load
-		title="Agenda tu Cita"
-		subtitle="Agenda una cita personalizada con el equipo E2 que se acomode exactamente a lo que buscas"
-		background="light"
-	>
-		<div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
-			<div class="text-center">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiCalendar client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">1. Completa el Formulario</h3>
-				<p class="text-gray-600 dark:text-gray-300">
-					Cuéntanos sobre tu proyecto y necesidades.
-				</p>
-			</div>
-			<div class="text-center">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiClock client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">2. Confirmación</h3>
-				<p class="text-gray-600 dark:text-gray-300">
-					Recibirás una confirmación en menos de 24 horas.
-				</p>
-			</div>
-			<div class="text-center">
-				<div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4">
-					<HiVideoCamera client:load size={32} className="text-primary dark:text-primary-500" />
-				</div>
-				<h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">3. Reunión</h3>
-				<p class="text-gray-600 dark:text-gray-300">
-					Nos reunimos virtualmente o en persona.
-				</p>
-			</div>
-		</div>
-	</Section>
+<Section
+  client:load
+  title="Agenda tu Cita"
+  subtitle="Agenda una cita personalizada con el equipo E2 que se acomode exactamente a lo que buscas"
+  background="light"
+>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
+    <div class="text-center">
+      <div
+        class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+      >
+        <HiCalendar
+          client:load
+          size={32}
+          className="text-primary dark:text-primary-500"
+        />
+      </div>
+      <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+        1. Completa el Formulario
+      </h3>
+      <p class="text-gray-600 dark:text-gray-300">
+        Cuéntanos sobre tu proyecto y necesidades.
+      </p>
+    </div>
+    <div class="text-center">
+      <div
+        class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+      >
+        <HiClock
+          client:load
+          size={32}
+          className="text-primary dark:text-primary-500"
+        />
+      </div>
+      <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+        2. Confirmación
+      </h3>
+      <p class="text-gray-600 dark:text-gray-300">
+        Recibirás una confirmación en menos de 24 horas.
+      </p>
+    </div>
+    <div class="text-center">
+      <div
+        class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-primary-700 rounded-full mb-4"
+      >
+        <HiVideoCamera
+          client:load
+          size={32}
+          className="text-primary dark:text-primary-500"
+        />
+      </div>
+      <h3 class="text-xl font-bold mb-2 text-primary-700 dark:text-white">
+        3. Reunión
+      </h3>
+      <p class="text-gray-600 dark:text-gray-300">
+        Nos reunimos virtualmente o en persona.
+      </p>
+    </div>
+  </div>
+</Section>
