--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -22,6 +22,8 @@ import NatureCard from "../components/shared/NatureCard";
   />
 
   <Section
+    ifBg
+    bgImage="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
     client:load
     title="Información de Contacto"
     subtitle="Múltiples formas de comunicarte con nosotros"
