--- a/src/pages/que-hacemos.astro
+++ b/src/pages/que-hacemos.astro
@@ -22,6 +22,8 @@ import video from "../assets/videos/conocenos.mp4";
   <ProcesoHumano client:visible />
 
   <Section
+    ifBg={true}
+    bgImage="https://images.unsplash.com/photo-1518531933037-91b2f5f229cc?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
     client:load
     title="Te ayudamos con cualquiera de tus necesidades"
     background="dark"
