--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -5,7 +5,6 @@ import Section from "../components/Section";
 import Card from "../components/Card";
 import { getCollection } from "astro:content";
 import Principios from "../components/quienes-somos/Principios.astro";
-import History from "../components/quienes-somos/History.astro";
 import Values from "../components/quienes-somos/Values";
 import video from "../assets/videos/quienes.mp4";
 
@@ -23,16 +22,6 @@ const teamMembers = await getCollection("team");
     videoSrc={video}
   />
 
-  <!-- Historia  -->
-  <!-- <Section
-    client:load
-    title="Nuestra Historia"
-    subtitle="Más de 10 años poniendo vidas en marcha"
-    background="light"
-  >
-    <History />
-  </Section> -->
-
   <!-- Pilares  -->
   <Section
     client:load
@@ -45,6 +34,8 @@ const teamMembers = await getCollection("team");
 
   <!-- Valores  -->
   <Section
+    ifBg={true}
+    bgImage="https://images.unsplash.com/photo-1686701276039-e49cb956cc09?q=80&w=2086&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
     client:load
     title="Nuestros Valores"
     subtitle="Los pilares que guían nuestro trabajo"
