--- a/src/components/contacto/UbicacionYHorario.astro
+++ b/src/components/contacto/UbicacionYHorario.astro
@@ -4,7 +4,7 @@ import Section from "../Section";
 
 <Section
   ifBg
-  bgImage="https://images.unsplash.com/photo-1533038590840-1cde6e668a91?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+  bgImage="https://images.pexels.com/photos/35196/water-plant-green-fine-layers.jpg"
   client:load
   title="Ubicación y Horarios"
   subtitle="Visítanos o contáctanos en nuestros horarios de atención"
