--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,6 +5,7 @@ import Section from "../components/Section";
 import { getCollection } from "astro:content";
 import PostCard from "../components/PostCard.astro";
 import video from "../assets/videos/blog.mp4";
+import placeholderImage from "../assets/images/placeholderIMG/blog.webp";
 
 const blogs = await getCollection("blog");
 ---
@@ -18,6 +19,7 @@ const blogs = await getCollection("blog");
     title="Nuestro Blog"
     subtitle="Consejos expertos para tu vida y patrimonio"
     videoSrc={video}
+    placeholder={placeholderImage.src}
   />
 
   <Section
