--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -5,6 +5,7 @@ import Section from "../components/Section";
 import PostCard from "../components/PostCard.astro";
 import video from "../assets/videos/eventos2.mp4";
 import { getCollection, type CollectionEntry } from "astro:content";
+import placeholderImage from "../assets/images/placeholderIMG/eventos.webp";
 
 const events = await getCollection("eventos");
 const now = new Date();
@@ -31,6 +32,7 @@ const pastEvents: CollectionEntry<"eventos">[] = events
     title="Eventos"
     subtitle="Únete a nuestras actividades y talleres"
     videoSrc={video}
+    placeholder={placeholderImage.src}
   />
 
   <Section
