--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -7,6 +7,7 @@ import { getCollection } from "astro:content";
 import PrincipiosSlider from "../components/quienes-somos/PrincipiosSlider";
 import Values from "../components/quienes-somos/Values";
 import video from "../assets/videos/quienes.mp4";
+import placeholderImage from "../assets/images/placeholderIMG/quienes.webp";
 
 const teamMembers = await getCollection("team");
 ---
@@ -20,6 +21,7 @@ const teamMembers = await getCollection("team");
     title="Quiénes Somos"
     subtitle="Somos 2 Expertos en estrategias patrimoniales"
     videoSrc={video}
+    placeholder={placeholderImage.src}
   />
 
   <!-- Pilares  -->
