UPDATE: Quienes somos

--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -19,7 +19,7 @@ const teamMembers = await getCollection("team");
   <Hero
     client:load
     title="Quiénes Somos"
-    subtitle="Somos 2 Expertos en estrategias patrimoniales"
+    subtitle="Expertos en diseñar proyectos para disfrutar en vida"
     videoSrc={video}
     placeholder={placeholderImage.src}
   />
