--- a/src/pages/quienes-somos.astro
+++ b/src/pages/quienes-somos.astro
@@ -48,7 +48,7 @@ const teamMembers = await getCollection("team");
   <!-- Team  -->
   <Section
     client:load
-    title="Nuestro equipo E2"
+    title="Somos E2"
     subtitle="Conoce más a detalle a los expertos"
     background="light"
   >
