--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -94,7 +94,7 @@ import placeholderImage from "../assets/images/placeholderIMG/contact.webp";
           Ubicación
         </h3>
         <p class="text-gray-600 dark:text-gray-300 relative z-10">
-          Calle Principal 123<br />Monterrey, Nuevo León
+          Paseo de Varsovia 4513<br />Las Torres, Nuevo León
         </p>
       </NatureCard>
     </div>
