--- a/src/components/contacto/UbicacionYHorario.astro
+++ b/src/components/contacto/UbicacionYHorario.astro
@@ -48,15 +48,15 @@ import Section from "../Section";
           Dirección
         </h4>
         <p class="text-gray-600 dark:text-gray-300">
-          Calle Principal 123<br />
-          Monterrey, Nuevo León
+          Paseo de Varsovia 4513<br />
+          Las Torres, Nuevo León
         </p>
       </div>
     </div>
 
     <div class="h-full min-h-[400px] rounded-xl overflow-hidden shadow-xl">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d230187.65318127742!2d-100.47456659508248!3d25.648674971921906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86629531b437f8f5%3A0xa3d3d3ca6ac89894!2sMonterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1764827882336!5m2!1ses-419!2smx"
+        src={"https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d899.422249488607!2d-100.27813997149133!3d25.615248698584384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662bf6c252be897%3A0xd15448fbd8cfdddd!2sP.%C2%BA%20de%20Varsovia%204513%2C%20Las%20Torres%2C%2064930%20Monterrey%2C%20N.L.!5e0!3m2!1ses-419!2smx!4v1767811300680!5m2!1ses-419!2smx"}
         width="100%"
         height="100%"
         style="border:0;"
