UPDATE: FOoter update and linkeind added

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,19 +21,22 @@ import LogoW from "../assets/images/LogoW.svg";
         <ul class="space-y-2">
           <li>
             <a href="/" class="text-gray-400 hover:text-white transition-colors"
-              >Inicio</a>
+              >Inicio</a
+            >
           </li>
           <li>
             <a
               href="/que-hacemos"
               class="text-gray-400 hover:text-white transition-colors"
-              >Qué Hacemos</a>
+              >Qué Hacemos</a
+            >
           </li>
           <li>
             <a
               href="/quienes-somos"
               class="text-gray-400 hover:text-white transition-colors"
-              >Quiénes Somos</a>
+              >Quiénes Somos</a
+            >
           </li>
         </ul>
       </div>
@@ -45,18 +48,21 @@ import LogoW from "../assets/images/LogoW.svg";
             <a
               href="/eventos"
               class="text-gray-400 hover:text-white transition-colors"
-              >Eventos</a>
+              >Eventos</a
+            >
           </li>
           <li>
             <a
               href="/blog"
-              class="text-gray-400 hover:text-white transition-colors">Blog</a>
+              class="text-gray-400 hover:text-white transition-colors">Blog</a
+            >
           </li>
           <li>
             <a
               href="/contacto"
               class="text-gray-400 hover:text-white transition-colors"
-              >Contáctanos</a>
+              >Contáctanos</a
+            >
           </li>
         </ul>
       </div>
@@ -84,7 +90,7 @@ import LogoW from "../assets/images/LogoW.svg";
           </a>
           <a
             target="_blank"
-            href="#"
+            href="https://www.linkedin.com/in/veronica-elizondo-gonz%C3%A1lez-54a370111/"
             class="text-gray-400 hover:text-white transition-colors"
             aria-label="LinkedIn"
           >
