--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -68,7 +68,7 @@ import placeholderImage from "../assets/images/placeholderIMG/contact.webp";
         <h3
           class="text-xl font-bold mb-2 text-primary-700 dark:text-white relative z-10"
         >
-          Teléfono
+          Teléfonos
         </h3>
         <a
           href="tel:+528120394143"
@@ -76,6 +76,12 @@ import placeholderImage from "../assets/images/placeholderIMG/contact.webp";
         >
           +52 81 2039 4143
         </a>
+        <br />
+        <a
+          href="tel:+528120396817"
+          class="text-primary dark:text-primary-500 hover:underline relative z-10"
+          >+52 81 2039 6817</a
+        >
       </NatureCard>
 
       <NatureCard client:visible className="text-center">
