--- a/src/pages/team/[slug].astro
+++ b/src/pages/team/[slug].astro
@@ -3,6 +3,7 @@ import { getCollection, render } from "astro:content";
 import ContentLayout from "../../layouts/ContentLayout.astro";
 import Card from "../../components/Card";
 import ThemeToggle from "../../components/shared/ThemeToggle";
+import Gallery from "../../components/shared/Gallery.astro";
 
 export async function getStaticPaths() {
   const teamEntries = await getCollection("team");
@@ -96,6 +97,23 @@ const otherMembers = allTeamMembers.filter(
           </div>
         </div>
       </div>
+
+      <section class="max-w-6xl mx-auto py-10">
+        <div class="text-center flex flex-col gap-2">
+          <h3
+            class="text-2xl md:text-4xl font-bold text-primary-700 dark:text-white"
+          >
+            Galería
+          </h3>
+          <p class="text-gray-600 dark:text-gray-300 text-lg md:text-xl">
+            Conoce más sobre el trabajo y la experiencia del equipo de
+            <span class="font-bold text-primary-700 dark:text-white"
+              >E2TRATEGIAS PATRIMONIALES</span
+            >
+          </p>
+        </div>
+        <Gallery imageFolder="Gallery" />
+      </section>
 
       {
         otherMembers.length > 0 && (
