UPDATE: Deploy changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import Reconocimientos from "../components/shared/Reconocimientos";
     showButton={true}
     onlyTwo={true}
     title="E2TRATEGIAS PATRIMONIALES"
-    subtitle="Diseñamos estrategias para disfrutar en vida"
+    subtitle="Déjanos hacerte la vida más fácil"
     ctaText="Conoce Más"
     ctaLink="que-hacemos"
     videoSrc={video}
@@ -30,7 +30,7 @@ import Reconocimientos from "../components/shared/Reconocimientos";
   <Section
     client:load
     title="Nuestros Servicios"
-    subtitle="Estrategias patrimoniales diseñadas para proteger y construir tu futuro"
+    subtitle="Estrategias patrimoniales diseñadas para que tomes ya el control de tu vida"
     background="dark"
   >
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
