--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -53,6 +53,18 @@ import placeholderImage from "../assets/images/placeholderIMG/contact.webp";
         >
           e2.veroelizondo@gmail.com
         </a>
+        <a
+          href="mailto:vero.elizondo@e2estrategiaspatrimoniales.com"
+          class="text-primary dark:text-primary-500 hover:underline relative z-10"
+        >
+          vero.elizondo@e2estrategiaspatrimoniales.com
+        </a>
+        <a
+          href="mailto:rafaesquer@e2estrategiaspatrimoniales.com"
+          class="text-primary dark:text-primary-500 hover:underline relative z-10"
+        >
+          rafaesquer@e2estrategiaspatrimoniales.com
+        </a>
       </NatureCard>
 
       <NatureCard client:visible className="text-center">
