UPDATE: ultimos ajuste pt1

--- a/src/layouts/RootLayout.astro
+++ b/src/layouts/RootLayout.astro
@@ -14,7 +14,7 @@ interface Props {
 
 const {
   title = "E2TRATEGIAS PATRIMONIALES",
-  description = "Déjanos hacerte la vida más fácil",
+  description = "Juntos, haremos tu vida más fácil",
   showHeader = true,
 } = Astro.props;
 ---
