--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,10 @@ import Reconocimientos from "../components/shared/Reconocimientos";
     showButton={true}
     onlyTwo={true}
     title="E2TRATEGIAS PATRIMONIALES"
-    subtitle="Déjanos hacerte la vida más fácil"
+    subtitle="Juntos, haremos tu vida más fácil"
     ctaText="Conoce Más"
     ctaLink="que-hacemos"
+    isSecondSubtitle={true}
     videoSrc={video}
   />
   <Section
