--- a/src/components/shared/Soon.astro
+++ b/src/components/shared/Soon.astro
@@ -31,7 +31,7 @@ import bgImage from "../../assets/working/eventosBG.webp";
           <h1
             class="text-4xl md:text-5xl font-bold text-gray-900 mb-6 drop-shadow-sm"
           >
-            Estamos trabajando en esta sección
+            Mantente en contacto, pronto habrá noticias
           </h1>
 
           <p class="text-xl text-gray-800 mb-8 leading-relaxed font-medium">
